--- a/content/blog/part-1-mathematics-of-gradient-descent/index.mdx
+++ b/content/blog/part-1-mathematics-of-gradient-descent/index.mdx
@@ -23,7 +23,7 @@ This is part 1 of the series on Gradient Descent.
 
 # Introduction
 
-Remember in the <Link to="/blog/linear-regression">the Linear Regression post</Link>, I mentioned that we can use gradient descent to descrease the MSE of a Linear Regression model.
+Remember in <Link to="/blog/linear-regression">the Linear Regression post</Link>, I mentioned that we can use gradient descent to descrease the MSE of a Linear Regression model.
 Let's see how it works at glance. 
 
 # Mathematics of Gradient Descent
@@ -49,10 +49,7 @@ $$
     \Theta_{i} = \Theta_i - \alpha \cdot \frac{\partial}{\partial \Theta_i} J(\Theta_0, \Theta_1)
 $$
 
-where
-
-1. $\Theta_{i}$ is the coefficients we want to update
-2. $\alpha$ is the learning rate
+where $\Theta_{i}$ is the coefficients we want to update and $\alpha$ is the learning rate.
 
 Bear with me! This is going to involve a lot of Maths, especially Calculus.
 
