--- a/content/blog/what-is-the-best-learning-rate/index.mdx
+++ b/content/blog/what-is-the-best-learning-rate/index.mdx
@@ -1,8 +1,8 @@
 ---
-title: What is the Best Learning Rate?
+title: 'What is the Best Learning Rate?'
 type: 'blog'
 date: 2022-02-05
-published: false
+published: true
 description: 'Is the bigger learning rate better? What is the best learning rate for your model?'
 tags: ['Python', 'Optimization', 'Sampling']
 ---
