--- a/content/blog/part-3-batch-gradient-descent/index.mdx
+++ b/content/blog/part-3-batch-gradient-descent/index.mdx
@@ -21,4 +21,4 @@ This is part 3 of the series on Gradient Descent.
     Part 4: Stochastic Gradient Descent
   </Link>
 
-# References
+# Coming Soon
