--- a/content/blog/what-is-the-best-learning-rate/index.mdx
+++ b/content/blog/what-is-the-best-learning-rate/index.mdx
@@ -4,8 +4,8 @@ type: 'blog'
 date: 2022-02-28
 published: false
 description: 'Is the bigger learning rate better? What is the best learning rate for your model?'
-tags: ['Python', 'Optimization', 'Sampling']
+tags: ['Python', 'Optimization']
 ---
 
-# Coming Soon!
+# Coming Soon
 
