intercept def fixed

--- a/content/blog/linear-regression/index.mdx
+++ b/content/blog/linear-regression/index.mdx
@@ -30,7 +30,8 @@ $$
     y = \beta_0 + \beta_1 \times x
 $$
 
-You should know that the intercept or $\beta_0$ is the lowest value in the line.
+You should know that the intercept or $\beta_0$ is the starting point of the regression line.
+Whether the line is going up or down depends on the $\beta_1$ and the data.
 If $\beta_0 = 0$, it means that our regression line will start from $0$.
 
 Expressing the equation like we did above is quite cryptic for people who don't have strong mathematical background.
