--- a/content/blog/linear-regression/index.mdx
+++ b/content/blog/linear-regression/index.mdx
@@ -107,3 +107,8 @@ If we did so, it would be a tedious job to do.
 
 However, there is another way! That way is to use the help of Calculus to find the best values for $\beta_0$ and $\beta_1$ by updating those two values over time.
 If you are interested on how to do this, please check out <Link to="/blog/part-1-mathematics-of-gradient-descent">this series on Gradient Descent</Link>.
+
+# References
+
+1. Wikipedia. Linear Regression. Source [https://en.wikipedia.org/wiki/Linear_regression](https://en.wikipedia.org/wiki/Linear_regression)
+2. J. Gareth, W. Daniella, H. Trevor, T. Robert. _An Introduction to Statistical Learning: With Applications in R_. Springer, 2013.
