--- a/content/blog/part-1-mathematics-of-gradient-descent/index.mdx
+++ b/content/blog/part-1-mathematics-of-gradient-descent/index.mdx
@@ -151,3 +151,6 @@ $$
 The two equations above will help us to approximate the minimum value of the cost function by updating $\beta_0$ and $\beta_1$ over time.
 
 # References
+
+1. R. Sebastian. An overview of gradient descent optimization algorithms. Source [https://ruder.io/optimizing-gradient-descent](https://ruder.io/optimizing-gradient-descent)
+2. C. Kartik, M. Erik, A. Samantha, A. F. Emilio, D. Irene, G. Johann, G. Melissa, H. Basil, S. Steffi, T. Alanna, Y. Shannon. Gradient Descent: The Ultimate Optimizer. Source [https://arxiv.org/pdf/1909.13371.pdf](https://arxiv.org/pdf/1909.13371.pdf)
