new posts added

--- a/content/blog/linear-regression/index.mdx
+++ b/content/blog/linear-regression/index.mdx
@@ -4,7 +4,7 @@ type: 'blog'
 date: 2022-02-11
 published: true
 description: 'A gentle introduction to Linear Regression'
-tags: ['Machine Learning', 'Supervised Learning']
+tags: ['Machine Learning', 'Statistics', 'Supervised Learning']
 ---
 
 import { Link } from 'gatsby'
@@ -110,5 +110,5 @@ If you are interested on how to do this, please check out <Link to="/blog/part-1
 
 # References
 
-1. Wikipedia. Linear Regression. Source [https://en.wikipedia.org/wiki/Linear_regression](https://en.wikipedia.org/wiki/Linear_regression)
+1. Wikipedia. _Linear Regression_. Source [https://en.wikipedia.org/wiki/Linear_regression](https://en.wikipedia.org/wiki/Linear_regression)
 2. J. Gareth, W. Daniella, H. Trevor, T. Robert. _An Introduction to Statistical Learning: With Applications in R_. Springer, 2013.
