--- a/content/blog/part-2-gradient-descent/index.mdx
+++ b/content/blog/part-2-gradient-descent/index.mdx
@@ -160,3 +160,7 @@ Let's animate the movement of the regression lines.
 ![Regression line animation](./gd.gif)
 
 I am not including most of the codes in this blog post. So if you want to know how those graphs were generated, [click here](https://www.kaggle.com/bijonsetyawan/part-1-gradient-descent) to check the Python notebook on Kaggle.
+
+# References
+1. M. Jack. _3D Gradient Descent in Python_. Source [https://jackmckew.dev/3d-gradient-descent-in-python.html](https://jackmckew.dev/3d-gradient-descent-in-python.html)
+2. T. Arseny. _Gradient Descent From Scratch_. Source [https://towardsdatascience.com/gradient-descent-from-scratch-e8b75fa986cc](https://towardsdatascience.com/gradient-descent-from-scratch-e8b75fa986cc)
