--- a/content/blog/part-1-mathematics-of-gradient-descent/index.mdx
+++ b/content/blog/part-1-mathematics-of-gradient-descent/index.mdx
@@ -152,5 +152,6 @@ The two equations above will help us to approximate the minimum value of the cos
 
 # References
 
-1. R. Sebastian. An overview of gradient descent optimization algorithms. Source [https://ruder.io/optimizing-gradient-descent](https://ruder.io/optimizing-gradient-descent)
-2. C. Kartik, M. Erik, A. Samantha, A. F. Emilio, D. Irene, G. Johann, G. Melissa, H. Basil, S. Steffi, T. Alanna, Y. Shannon. Gradient Descent: The Ultimate Optimizer. Source [https://arxiv.org/pdf/1909.13371.pdf](https://arxiv.org/pdf/1909.13371.pdf)
+1. R. Sebastian. _An overview of gradient descent optimization algorithms_. Source [https://ruder.io/optimizing-gradient-descent](https://ruder.io/optimizing-gradient-descent)
+2. C. Kartik, M. Erik, A. Samantha, A. F. Emilio, D. Irene, G. Johann, G. Melissa, H. Basil, S. Steffi, T. Alanna, Y. Shannon. _Gradient Descent: The Ultimate Optimizer_. Source [https://arxiv.org/pdf/1909.13371.pdf](https://arxiv.org/pdf/1909.13371.pdf)
+3. M. Chris. _Gradient Descent Derivation_. Source [https://mccormickml.com/2014/03/04/gradient-descent-derivation/](https://mccormickml.com/2014/03/04/gradient-descent-derivation/)
