--- a/content/blog/part-3-mini-batch-gradient-descent/index.mdx
+++ b/content/blog/part-3-mini-batch-gradient-descent/index.mdx
@@ -1,9 +1,9 @@
 ---
-title: 'Part 4: Stochastic Gradient Descent'
+title: 'Part 3: Mini-Batch Gradient Descent'
 type: 'blog'
-date: 2022-02-26
+date: 2022-02-22
 published: false
-description: 'A Stochastic Gradient Descent implementation with Linear Regression in Python'
+description: 'A Batch Gradient Descent implementation with Linear Regression in Python'
 tags: ['Machine Learning', 'Optimization', 'Python']
 ---
 
@@ -17,12 +17,9 @@ This is part 3 of the series on Gradient Descent.
 - <Link to="/blog/part-2-gradient-descent">
     Part 2: Batch Gradient Descent
   </Link>
-- <Link to="/blog/part-3-batch-gradient-descent">
-    Part 3: Mini-Batch Gradient Descent
+- <Link to="/blog/part-4-stochastic-gradient-descent">
+    Part 4: Stochastic Gradient Descent
   </Link>
-
-# Definition
-
 
 
 # References
@@ -31,3 +28,4 @@ This is part 3 of the series on Gradient Descent.
 2. P. Sushant. _Batch, Mini Batch, and Stochastic Gradient Descent_. Source [https://towardsdatascience.com/batch-mini-batch-stochastic-gradient-descent-7a62ecba642a](https://towardsdatascience.com/batch-mini-batch-stochastic-gradient-descent-7a62ecba642a)
 3. Geeksforgeeks. _Difference between Batch Gradient Descent and Stochastic Gradient Descent_. Source [https://www.geeksforgeeks.org/difference-between-batch-gradient-descent-and-stochastic-gradient-descent/](https://www.geeksforgeeks.org/difference-between-batch-gradient-descent-and-stochastic-gradient-descent/)
 4. Sweta. _Batch, Mini Batch, and Stochastic Gradient Descent_. Source [https://sweta-nit.medium.com/batch-mini-batch-and-stochastic-gradient-descent-e9bc4cacd461](https://sweta-nit.medium.com/batch-mini-batch-and-stochastic-gradient-descent-e9bc4cacd461)
+5. B. Jason. _A Gentle Introduction to Mini-Batch Gradient Descent and How to Configure Batch Size_. Source [https://machinelearningmastery.com/gentle-introduction-mini-batch-gradient-descent-configure-batch-size/](https://machinelearningmastery.com/gentle-introduction-mini-batch-gradient-descent-configure-batch-size/)
