--- a/content/blog/part-2-batch-gradient-descent/index.mdx
+++ b/content/blog/part-2-batch-gradient-descent/index.mdx
@@ -1,5 +1,5 @@
 ---
-title: 'Part 2: Gradient Descent'
+title: 'Part 2: Batch Gradient Descent'
 type: 'blog'
 date: 2022-02-16
 published: true
@@ -14,8 +14,8 @@ This is part 2 of the series on Gradient Descent.
 - <Link to="/blog/part-1-mathematics-of-gradient-descent">
     Part 1: Mathematics of Gradient Descent
   </Link>
-- <Link to="/blog/part-3-batch-gradient-descent">
-    Part 3: Batch Gradient Descent
+- <Link to="/blog/part-3-mini-batch-gradient-descent">
+    Part 3: Mini-Batch Gradient Descent
   </Link>
 - <Link to="/blog/part-4-stochastic-gradient-descent">
     Part 4: Stochastic Gradient Descent
@@ -160,6 +160,13 @@ Let's animate the movement of the regression lines.
 ![Regression line animation](./gd.gif)
 
 I am not including most of the codes in this blog post. So if you want to know how those graphs were generated, [click here](https://www.kaggle.com/bijonsetyawan/part-1-gradient-descent) to check the Python notebook on Kaggle.
+
+# Conclusion
+
+Here are some keypoints for Batch Gradient Descent.
+
+1. 
+
 
 # References
 1. M. Jack. _3D Gradient Descent in Python_. Source [https://jackmckew.dev/3d-gradient-descent-in-python.html](https://jackmckew.dev/3d-gradient-descent-in-python.html)
